--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Jinja2==2.8.1
 kombu==4.0.2
 librabbitmq==1.6.1
 MarkupSafe==0.23
+meld3==1.0.2
 msgpack-python==0.4.8
 pika==0.10.0
 python-engineio==1.1.0
@@ -28,6 +29,7 @@ python-socketio==1.6.2
 pytz==2016.10
 redis==2.10.5
 six==1.10.0
+supervisor==3.3.1
 tornado==4.2
 vine==1.1.3
 visitor==0.1.3
